--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 /* Importing fonts from Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Azonix:wght@400;700&display=swap');
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
@@ -101,6 +100,7 @@ hr {
 }
 
 /* Navbar Styles */
-.navbar {
+.navbar,.partner {
   font-family: 'Azonix', sans-serif; /* Apply Azonix-like font to navbar */
 }
+
